# WXzhushou

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup-ssh-key.ps1
.claude/: settings.local.json
app/: __init__.py  server.py
app/routers/: api.py  wechat.py
database/: __init__.py  base.py  session.py
doc/: 1_项目归档.md  2_项目规划.md  3_开发指南.md  4_第二阶段计划_日程助手.md  5_LangChain技术方案分析.md  ai_agent_flow.md  database_architecture.md  langchain_refactor_plan.md  reminder_feature.md  简历项目介绍.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Contacts.tsx  Dashboard.tsx  Login.tsx  Schedule.tsx  Settings.tsx
models/: contact.py  message.py  module_subscription.py  schedule.py  user_settings.py
services/: __init__.py  agent_service.py  ai_service.py  asr_service.py  chat_with_action.py  common_tools.py  contact_executor.py  contact_service.py  langchain_agent.py  langchain_llm.py  langchain_tools.py  reminder_service.py  schedule_agent.py  schedule_agent_simple.py  schedule_executor.py  schedule_service.py  wechat_push_service.py  wechat_service.py
services/asr/: __init__.py
services/core/: __init__.py  agent.py  chat.py  llm.py
services/modules/: __init__.py  base.py  registry.py  subscription.py
services/modules/contact/: __init__.py  actions.py  module.py  reminder.py  service.py
services/modules/schedule/: __init__.py  actions.py  module.py  reminder.py  service.py
services/modules/settings/: __init__.py  module.py
services/reminder/: __init__.py  base.py  manager.py
services/wechat/: __init__.py  media.py  message.py  push.py
utils/: crypto.py  logger.py  time_parser.py
