[project]
name = "wxzhushou"
version = "3.0.0"
description = "基于 LangChain 的微信智能日程助手"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SweetZzx" }
]
keywords = ["wechat", "langchain", "agent", "schedule", "ai"]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.6",
    "httpx>=0.28.0",
    "aiohttp>=3.9.0",

    # LangChain 核心 (按重构计划 1.2.x)
    "langchain>=1.2.0",
    "langchain-openai>=0.4.0",
    "langchain-community>=0.4.0",

    # LangGraph 状态管理 (按重构计划 1.0.x)
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # 数据库
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # 智谱 AI
    "zhipuai>=2.1.0",

    # 定时任务
    "apscheduler>=3.11.0",

    # 时间解析
    "dateparser>=1.2.0",
    "python-dateutil>=2.8.0",

    # 日志
    "loguru>=0.7.0",

    # 加密
    "cryptography>=41.0.0",

    # 工具
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
wxzhushou = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "services", "models", "database", "utils"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
